# Knowledge-graphs-inversion

./: .gitignore  .gitmodules  README.md  pyproject.toml
Implementation/: basic-inversion.py  demo_inversion.py  graphdbtest.py  initialize.py  mapping-reader-test.py  notes.md  poc-cleaner-attempt.py  poc-inversion.py  poc_inversion.py  repo-config.ttl  requirements.txt  sparqltest.py  test-cases.py  workflow.md
Implementation/Tests/GTFS-Madrid/: test_gtfs.py
Implementation/Tests/LUBM4OBDA/: mapping_csv.ttl  test_lubm4obda.py
Implementation/Tests/RML_test_cases/: create_metadata_file.py  input_CSV.csv  input_JSON.csv  input_RDF.csv  input_XML.csv  input_table.csv  test_rml_test_cases.py
Implementation/demo/: demo.py  final_demo.py
Implementation/demo/templates/: base.html  demo.html  generated_mappings_textarea.html  (+6 more)
Paper/: abreviations.tex  abstract.tex  bibliografie.bib  chapter_1.tex  chapter_1_introduction.tex  chapter_1_related_work.tex  chapter_2_related_work.tex  chapter_3_implementation.tex  chapter_4_evaluation.tex  chapter_5_conclusion.tex  fiiw.sty  fiiw_eng.sty  samenvatting.tex  symbolen.tex  thesis.tex  voorwoord.tex
r2rml-inversion/: app.py  config.ini  database_manager.py  inversion_sql.py  morph_kgc_config.ini  poc_inversion.py
r2rml-inversion/r2rml_test_cases/: .gitignore  manifest.ttl  metadata.csv  requirements.txt  results-mysql.csv  results-mysql.ttl  results-postgresql.csv  results-postgresql.ttl  results.csv  results.ttl  test.py
r2rml-inversion/templates/: index.jinja
r2rml-test-cases-support/: README.md  config.ini  output.nt
(+43 files in other folders)
