[tool.poetry]
name = "knowledge-graphs-inversion"
version = "0.1.0"
description = ""
authors = ["arcangelo7 <arcangelomas@gmail.com>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
morph-kgc = "^2.7.0"
pandas = "^2.2.2"
build = "^1.2.1"
requests = "^2.31.0"
sparqlwrapper = "^2.0.0"
flask = "^3.0.3"
turbo-flask = "^0.8.4"
yatter = "^1.1.4"
pyyaml = "^6.0"
rdflib = "^6.0.0"
jsonpath-ng = "^1.6.1"


[tool.poetry.group.test.dependencies]
mysql-connector-python = "8.0.22"
psycopg2-binary = "2.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
